[package]
name = "xcm-transactor-pallet"
authors = [ "PureStake" ]
edition = "2021"
version = "0.2.0"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.124", optional = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master"}
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master"}
scale-info = { version = "2.1.2", features = ["derive"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master"}


# Polkadot / XCM
xcm = { git = "https://github.com/paritytech/polkadot", branch = "master"}
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "master"}
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "master"}