[package]
name = "proof_sizes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
sp-core = "6.0.0"
sp-externalities = "0.12.0"
sp-state-machine = "0.12.0"
sp-trie = "6.0.0"
sp-runtime = "6.0.0"
zstd = "0.10.0"
